--- a/index.html
+++ b/index.html
@@ -65,6 +65,8 @@
                         <button class="filter-btn" data-addon="wa">WeakAuras</button>
                         <button class="filter-btn" data-addon="details">Details!</button>
                         <button class="filter-btn" data-addon="plater">Plater</button>
+                        <button class="filter-btn" data-addon="dbm">DBM</button>
+                        <button class="filter-btn" data-addon="bigwigs">BigWigs</button>
                     </div>
                 </div>
 
@@ -74,14 +76,20 @@
                         <button class="filter-btn active" data-class="all">Все классы</button>
                         <button class="filter-btn" data-class="warrior"><i class="fas fa-shield-alt"></i> Воин</button>
                         <button class="filter-btn" data-class="paladin"><i class="fas fa-sun"></i> Паладин</button>
-                        <button class="filter-btn" data-class="deathknight"><i class="fas fa-skull"></i> ДК</button>
+                        <button class="filter-btn" data-class="deathknight"><i class="fas fa-skull"></i> Рыцарь смерти</button>
                         <button class="filter-btn" data-class="mage"><i class="fas fa-fire"></i> Маг</button>
                         <button class="filter-btn" data-class="priest"><i class="fas fa-cross"></i> Жрец</button>
+                        <button class="filter-btn" data-class="rogue"><i class="fas fa-user-secret"></i> Разбойник</button>
+                        <button class="filter-btn" data-class="shaman"><i class="fas fa-bolt"></i> Шаман</button>
+                        <button class="filter-btn" data-class="hunter"><i class="fas fa-bow-arrow"></i> Охотник</button>
+                        <button class="filter-btn" data-class="warlock"><i class="fas fa-hat-wizard"></i> Чернокнижник</button>
+                        <button class="filter-btn" data-class="druid"><i class="fas fa-paw"></i> Друид</button>
                         <button class="filter-btn" data-class="universal"><i class="fas fa-users"></i> Универсальные</button>
                     </div>
                 </div>
 
-                <div class="filter-group">
+                <!-- УБИРАЕМ секцию фильтрации по ролям -->
+                <!-- <div class="filter-group">
                     <h3><i class="fas fa-tasks"></i> Роль</h3>
                     <div class="filter-options" id="roleFilter">
                         <button class="filter-btn active" data-role="all">Все роли</button>
@@ -89,7 +97,7 @@
                         <button class="filter-btn" data-role="healer"><i class="fas fa-heart"></i> Хил</button>
                         <button class="filter-btn" data-role="dps"><i class="fas fa-bolt"></i> ДПС</button>
                     </div>
-                </div>
+                </div> -->
             </div>
         </section>
 
@@ -135,7 +143,7 @@
                 </div>
                 
                 <div class="footer-links">
-                    <a href="https://github.com/YOUR-USERNAME/wow-addon-configs" target="_blank" class="github-link">
+                    <a href="https://github.com/n-burov/AferistHelper-web" target="_blank" class="github-link">
                         <i class="fab fa-github"></i> GitHub репозиторий
                     </a>
                     <a href="contribute.html" class="contribute-link">
