--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                         <button class="filter-btn" data-class="priest"><i class="fas fa-cross"></i> Жрец</button>
                         <button class="filter-btn" data-class="rogue"><i class="fas fa-user-secret"></i> Разбойник</button>
                         <button class="filter-btn" data-class="shaman"><i class="fas fa-bolt"></i> Шаман</button>
-                        <button class="filter-btn" data-class="hunter"><i class="fas fa-bow-arrow"></i> Охотник</button>
+                        <button class="filter-btn" data-class="hunter"><i class="fas fa-bullseye"></i> Охотник</button>
                         <button class="filter-btn" data-class="warlock"><i class="fas fa-hat-wizard"></i> Чернокнижник</button>
                         <button class="filter-btn" data-class="druid"><i class="fas fa-paw"></i> Друид</button>
                         <button class="filter-btn" data-class="universal"><i class="fas fa-users"></i> Универсальные</button>
