--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
             </div>
             <nav>
                 <a href="index.html" class="active"><i class="fas fa-th-large"></i> Конфиги</a>
+                <a href="macros.html"><i class="fas fa-terminal"></i> Макросы</a>
                 <a href="addons.html"><i class="fas fa-puzzle-piece"></i> Аддоны</a>
                 <a href="contribute.html" class="contribute-link">
                     <i class="fas fa-plus-circle"></i> Добавить конфиг
