--- a/macros.html
+++ b/macros.html
@@ -53,25 +53,13 @@
             </div>
         </div>
 
-        <!-- Фильтры -->
+        <!-- Фильтры - ТОЛЬКО по классу -->
         <section class="filters-section">
-            <h2><i class="fas fa-filter"></i> Фильтры</h2>
+            <h2><i class="fas fa-filter"></i> Фильтр по классу</h2>
             
             <div class="filters">
                 <div class="filter-group">
-                    <h3><i class="fas fa-plug"></i> Для аддона</h3>
-                    <div class="filter-options" id="addonFilter">
-                        <button class="filter-btn active" data-addon="all">Все</button>
-                        <button class="filter-btn" data-addon="universal">Универсальные</button>
-                        <button class="filter-btn" data-addon="elvui">ElvUI</button>
-                        <button class="filter-btn" data-addon="wa">WeakAuras</button>
-                        <button class="filter-btn" data-addon="details">Details!</button>
-                        <button class="filter-btn" data-addon="plater">Plater</button>
-                    </div>
-                </div>
-
-                <div class="filter-group">
-                    <h3><i class="fas fa-user"></i> Класс</h3>
+                    <h3><i class="fas fa-user"></i> Класс персонажа</h3>
                     <div class="filter-options" id="classFilter">
                         <button class="filter-btn active" data-class="all">Все классы</button>
                         <button class="filter-btn" data-class="warrior"><i class="fas fa-shield-alt"></i> Воин</button>
