--- a/macros.html
+++ b/macros.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>WoW 3.3.5 Макросы</title>
+    <title>Aferist Helper Macro</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="icon" type="image/x-icon" href="https://wow.zamimg.com/images/wow/icons/large/inv_misc_head_dragon_01.jpg">
@@ -12,7 +12,7 @@
     <header>
         <div class="container">
             <div class="header-content">
-                <h1><i class="fas fa-terminal"></i> WoW 3.3.5 Макросы</h1>
+                <h1><i class="fas fa-terminal"></i> Aferist Helper Macro</h1>
                 <p class="subtitle">Готовые макросы для World of Warcraft 3.3.5</p>
             </div>
             <nav>
