--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title><span class="horde-symbol"></span> Aferist Helper Configs</title>
+    <title> AferistHelper </title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="icon" type="image/x-icon" href="https://wow.zamimg.com/images/wow/icons/large/inv_misc_head_dragon_01.jpg">
@@ -12,7 +12,7 @@
     <header>
         <div class="container">
             <div class="header-content">
-                <h1><i class="fas fa-dragon"></i> Aferist Helper Configs</h1>
+                <h1><span class="horde-symbol"></span></i> AferistHelper | Конфиги</h1>
                 <p class="subtitle">Готовые конфиги для популярных аддонов</p>
             </div>
             <nav>
