--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <header>
         <div class="container">
             <div class="header-content">
-                <h1><link type="image/png" sizes="32x32" rel="icon" href=".../icons8-орда world-of-warcraft-color-32.png"></i> AferistHelper | Конфиги</h1>
+                <h1><img src="images/icons8-орда-world-of-warcraft-48.png" alt="Horde" class="horde-icon"> AferistHelper | Конфиги</h1>
                 <p class="subtitle">Готовые конфиги для популярных аддонов</p>
             </div>
             <nav>
