--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
         <div class="container">
             <div class="footer-content">
                 <div class="footer-info">
-                    <h3><i class="fas fa-dragon"></i> WoW 3.3.5 Config Hub</h3>
+                    <h3><img src="images/icons8-орда-world-of-warcraft-48.png" alt="Horde" class="horde-icon"> AferistHelper | Конфиги</h3>
                     <p>База конфигов для аддонов World of Warcraft 3.3.5</p>
                     <p class="footer-note">Конфиги обновляются автоматически при изменениях в репозитории</p>
                 </div>
@@ -154,7 +154,7 @@
             </div>
             
             <div class="footer-bottom">
-                <p>© 2024 WoW 3.3.5 Config Hub. World of Warcraft и Blizzard Entertainment являются товарными знаками или зарегистрированными товарными знаками Blizzard Entertainment, Inc.</p>
+                <p>© 2026 AferistHelper. World of Warcraft и Blizzard Entertainment являются товарными знаками или зарегистрированными товарными знаками</p>
             </div>
         </div>
     </footer>
