--- a/contribute.html
+++ b/contribute.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Добавить конфиг - WoW 3.3.5 Configs</title>
+    <title> AferistHelper </title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="icon" type="image/x-icon" href="https://wow.zamimg.com/images/wow/icons/large/inv_misc_head_dragon_01.jpg">
@@ -434,11 +434,12 @@
     <header>
         <div class="container">
             <div class="header-content">
-                <h1><i class="fas fa-code-branch"></i> Добавить конфиг</h1>
+                <h1><img src="images/icons8-орда-world-of-warcraft-48.png" alt="Horde" class="horde-icon"> AferistHelper | Добавить конфиг</h1>
                 <p class="subtitle">Поделитесь своими конфигами с сообществом</p>
             </div>
             <nav>
                 <a href="index.html"><i class="fas fa-th-large"></i> Конфиги</a>
+                <a href="macros.html"><i class="fas fa-terminal"></i> Макросы</a>
                 <a href="addons.html"><i class="fas fa-puzzle-piece"></i> Аддоны</a>
                 <a href="contribute.html" class="active contribute-link">
                     <i class="fas fa-plus-circle"></i> Добавить конфиг
@@ -749,25 +750,23 @@
         <div class="container">
             <div class="footer-content">
                 <div class="footer-info">
-                    <h3><i class="fas fa-dragon"></i> WoW 3.3.5 Config Hub</h3>
+                    <h3><img src="images/icons8-орда-world-of-warcraft-48.png" alt="Horde" class="horde-icon"> AferistHelper | Конфиги</h3>
                     <p>База конфигов для аддонов World of Warcraft 3.3.5</p>
                     <p class="footer-note">Все конфиги проверяются перед добавлением в базу</p>
                 </div>
                 
                 <div class="footer-links">
-                    <a href="https://github.com/YOUR-USERNAME/wow-addon-configs" 
-                       target="_blank" 
-                       class="github-link">
+                    <a href="https://github.com/n-burov/AferistHelper-web" target="_blank" class="github-link">
                         <i class="fab fa-github"></i> GitHub репозиторий
                     </a>
-                    <a href="index.html" class="contribute-link">
-                        <i class="fas fa-th-large"></i> Все конфиги
+                    <a href="contribute.html" class="contribute-link">
+                        <i class="fas fa-plus-circle"></i> Добавить конфиг
                     </a>
                 </div>
             </div>
             
             <div class="footer-bottom">
-                <p>© 2024 WoW 3.3.5 Config Hub. World of Warcraft и Blizzard Entertainment являются товарными знаками или зарегистрированными товарными знаками Blizzard Entertainment, Inc.</p>
+                <p>© 2026 AferistHelper. World of Warcraft и Blizzard Entertainment являются товарными знаками или зарегистрированными товарными знаками</p>
             </div>
         </div>
     </footer>
