--- a/addons.html
+++ b/addons.html
@@ -338,7 +338,7 @@
                 <p class="subtitle">Все необходимые аддоны для работы конфигов</p>
             </div>
             <nav>
-                <a href="index.html" class="active"><i class="fas fa-th-large"></i> Конфиги</a>
+                <a href="index.html"><i class="fas fa-th-large"></i> Конфиги</a>
                 <a href="macros.html"><i class="fas fa-terminal"></i> Макросы</a>
                 <a href="addons.html" class="active"><i class="fas fa-puzzle-piece"></i> Аддоны</a>
                 <a href="contribute.html" class="contribute-link">
