--- a/addons.html
+++ b/addons.html
@@ -592,7 +592,7 @@
                         Как обновить аддоны?
                     </div>
                     <div class="faq-answer">
-                        Скачайте новую версию и замените файлы в папке AddOns. Не забудьте сделать бэкап своих настроек.
+                        Аддоны обновляются из вкладки "Аддоны" в лаунчере Sirus, однако вы всегде можете обновить их вручную, скачав новый архив и заменив файлы в папке Addons (не забудьте сделать бэкап своих настроек).
                     </div>
                 </div>
             </div>
