--- a/addons.html
+++ b/addons.html
@@ -482,13 +482,13 @@
                         <i class="fas fa-users"></i>
                     </div>
                     <div class="addon-title">
-                        <h3>Plater</h3>
-                        <span class="addon-version">v9.1.6</span>
+                        <h3>Пак SegaZBS (В разработке)</h3>
+                        <span class="addon-version">v1.1.6</span>
                     </div>
                 </div>
                 <div class="addon-content">
                     <p class="addon-description">
-                        Кастомизация плашек имен (nameplates). Оптимизация для танков и рейдов.
+                        Полный пак аддонов, которые использует SegaZBS.
                     </p>
                     
                     <div class="addon-features">
@@ -502,12 +502,12 @@
                     </div>
                     
                     <div class="addon-download">
-                        <a href="https://www.curseforge.com/wow/addons/plater-nameplates" 
+                        <a href="" 
                            class="download-btn" 
                            target="_blank">
                             <i class="fas fa-external-link-alt"></i> CurseForge
                         </a>
-                        <a href="https://github.com/Tercioo/Plater-Nameplates/archive/refs/heads/main.zip" 
+                        <a href="" 
                            class="download-btn secondary" 
                            target="_blank">
                             <i class="fas fa-download"></i> Скачать архив
