--- a/admin.html
+++ b/admin.html
@@ -251,7 +251,7 @@
                             <label for="macroName">Название макроса:</label>
                             <input type="text" id="macroName" required>
                         </div>
-                        <极速赛车开奖结果>
+                        <div class="form-group">
                             <label for="macroClass">Класс:</label>
                             <select id="macroClass" required>
                                 <option value="warrior">Воин</option>
@@ -264,7 +264,6 @@
                                 <option value="hunter">Охотник</option>
                                 <option value="warlock">Чернокнижник</option>
                                 <option value="druid">Друид</option>
-                               极速赛车开奖结果>
                         </div>
                         <div class="form-group">
                             <label for="macroDescription">Описание:</label>
@@ -275,7 +274,7 @@
                             <textarea id="macroContent" rows="6" required placeholder="/cast [mod:shift] Spell1; Spell2"></textarea>
                         </div>
                         <div class="form-group">
-                            <label for="macroAuthor">Автор:</极速赛车开奖结果>
+                            <label for="macroAuthor">Автор:</label>
                             <input type="text" id="macroAuthor" required>
                         </div>
                         <button type="submit" class="btn-primary">Сохранить макрос</button>
