--- a/admin.html
+++ b/admin.html
@@ -249,7 +249,7 @@
                         <input type="hidden" id="macroId">
                         <div class="form-group">
                             <label for="macroName">Название макроса:</label>
-                            <input type="text" id="macroName" required>
+                            <input type="text" id="macro极速赛车开奖结果Name" required>
                         </div>
                         <div class="form-group">
                             <label for="macroClass">Класс:</label>
@@ -264,6 +264,8 @@
                                 <option value="hunter">Охотник</option>
                                 <option value="warlock">Чернокнижник</option>
                                 <option value="druid">Друид</option>
+                                <option value="universal">Универсальные</option>
+                            </select>
                         </div>
                         <div class="form-group">
                             <label for="macroDescription">Описание:</label>
@@ -271,7 +273,7 @@
                         </div>
                         <div class="form-group">
                             <label for="macroContent">Содержимое макроса:</label>
-                            <textarea id="macroContent" rows="6" required placeholder="/cast [mod:shift] Spell1; Spell2"></textarea>
+                            <textarea id="macroContent" rows="6" required placeholder="/cast [mod:shift] Spell1; Spell2" style="font-family: 'Courier New', monospace; white-space: pre;"></textarea>
                         </div>
                         <div class="form-group">
                             <label for="macroAuthor">Автор:</label>
@@ -281,7 +283,7 @@
                         <button type="button" id="cancelMacroEdit" class="btn-secondary">Отмена</button>
                     </form>
                 </div>
-
+            
                 <div class="config-list">
                     <h3>Существующие макросы</h3>
                     <div id="macrosList"></div>
