--- a/admin.html
+++ b/admin.html
@@ -214,7 +214,7 @@
                             </select>
                         </div>
                         <div class="form-group">
-                            <label for="configDescription">Описание:</label>
+                            <label form="configDescription">Описание:</label>
                             <textarea id="configDescription" rows="3" required></textarea>
                         </div>
                         <div class="form-group">
@@ -236,7 +236,7 @@
                 </div>
 
                 <div class="config-list">
-                                        <h3>Существующие конфиги</h3>
+                    <h3>Существующие конфиги</h3>
                     <div id="configsList"></div>
                 </div>
             </div>
@@ -249,7 +249,7 @@
                         <input type="hidden" id="macroId">
                         <div class="form-group">
                             <label for="macroName">Название макроса:</label>
-                            <input type="text" id="macro极速赛车开奖结果Name" required>
+                            <input type="text" id="macroName" required>
                         </div>
                         <div class="form-group">
                             <label for="macroClass">Класс:</label>
