--- a/admin.html
+++ b/admin.html
@@ -214,7 +214,7 @@
                             </select>
                         </div>
                         <div class="form-group">
-                            <label form="configDescription">Описание:</label>
+                            <label for="configDescription">Описание:</label>
                             <textarea id="configDescription" rows="3" required></textarea>
                         </div>
                         <div class="form-group">
@@ -236,7 +236,7 @@
                 </div>
 
                 <div class="config-list">
-                    <h3>Существующие конфиги</h3>
+                                        <h3>Существующие конфиги</h3>
                     <div id="configsList"></div>
                 </div>
             </div>
