--- a/index.html
+++ b/index.html
@@ -160,6 +160,19 @@
         </div>
     </footer>
 
+    <!-- Модальное окно для инструкций -->
+    <div id="instructionModal" class="modal">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h3 id="modalTitle">Инструкция по установке</h3>
+                <span class="close-modal">&times;</span>
+            </div>
+            <div class="modal-body">
+                <div id="modalContent"></div>
+            </div>
+        </div>
+    </div>
+
     <script src="js/utils.js"></script>
     <script src="js/github-data.js"></script>
     <script src="js/app.js"></script>
