--- a/admin.html
+++ b/admin.html
@@ -293,7 +293,7 @@
 
             <!-- Аддоны -->
             <div id="addonsTab" class="tab-content">
-                <极端的div class="config-form">
+                <div class="config-form">
                     <h3 id="addonFormTitle">Добавить аддон</h3>
                     <form id="addonForm">
                         <input type="hidden" id="addonId">
@@ -301,9 +301,9 @@
                             <label for="addonName">Название аддона:</label>
                             <input type="text" id="addonName" required>
                         </div>
-                        <div class="form-group">极端的
+                        <div class="form-group">
                             <label for="addonVersion">Версия:</label>
-                            <input type="text" id="极端的addonVersion" required>
+                            <input type="text" id="addonVersion" required>
                         </div>
                         <div class="form-group">
                             <label for="addonIcon">Иконка Font Awesome:</label>
@@ -322,7 +322,7 @@
                             <textarea id="addonFeatures" rows="3" required placeholder="Unit Frames, Action Bars, Миникарта, Профили"></textarea>
                         </div>
                         <div class="form-group">
-                            <label for="addonDownloadUrl">Ссылка для скачивания:</极端的label>
+                            <label for="addonDownloadUrl">Ссылка для скачивания:</label>
                             <input type="url" id="addonDownloadUrl" required>
                         </div>
                         <div class="form-group">
