--- a/addons.html
+++ b/addons.html
@@ -75,10 +75,8 @@
         
         .addon-header {
             padding: 25px;
-            display: flex;
-            align-items: center;
-            gap: 20px;
             border-bottom: 1px solid var(--border);
+            text-align: center;
         }
         
         .addon-icon {
