--- a/addons.html
+++ b/addons.html
@@ -344,6 +344,15 @@
 
     <div class="container">
 
+        <!-- Информационный баннер -->
+        <div class="info-banner">
+            <i class="fas fa-exclamation-triangle"></i>
+            <div>
+                <strong>ВНИМАНИЕ!</strong>
+                <p>Для корректной работы профилей и конфигов после скачивания любого аддона его необходимо сразу ОБНОВИТЬ, воспользовавшись программой AddonUpdater, которую можно скачать на этой же странице</p>
+            </div>
+        </div>
+
         <!-- Сетка аддонов -->
         <div class="addons-grid">
             <!-- Аддоны будут загружены динамически из addons.json -->
