--- a/macros.html
+++ b/macros.html
@@ -3,16 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AferistHelper</title>
+    <title> SegazbsHelper </title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-    <link rel="icon" type="image/x-icon" href="https://wow.zamimg.com/images/wow/icons/large/inv_misc_head_dragon_01.jpg">
+    <link rel="icon" type="image/x-icon" href="https://i.postimg.cc/RFNNQ4RP/71a2c23b-f462-482a-8e89-f0c4336d3d98.jpg">
 </head>
 <body>
     <header>
         <div class="container">
             <div class="header-content">
-                <h1><img src="images/icons8-орда-world-of-warcraft-48.png" alt="Horde" class="horde-icon"> AferistHelper | Макросы</h1>
+                <h1><img src="images/icons8-орда-world-of-warcraft-48.png" alt="Horde" class="horde-icon"> SegazbsHelper | Макросы</h1>
                 <p class="subtitle">Готовые макросы для World of Warcraft 3.3.5</p>
             </div>
             <nav>
@@ -130,7 +130,7 @@
             </div>
             
             <div class="footer-bottom">
-                <p>© 2026 AferistHelper. World of Warcraft и Blizzard Entertainment являются товарными знаками или зарегистрированными товарными знаками</p>
+                <p>© 2026 SegazbsHelper. World of Warcraft и Blizzard Entertainment являются товарными знаками или зарегистрированными товарными знаками</p>
             </div>
         </div>
     </footer>
