--- a/addons.html
+++ b/addons.html
@@ -328,7 +328,7 @@
     <header>
         <div class="container">
             <div class="header-content">
-                <h1><img src="images/icons8-орда-world-of-warcraft-48.png" alt="Horde" class="horde-icon"> AferistHelper | Аддоны</h1>
+                <h1><img src="images/icons8-орда-world-of-warcraft-48.png" alt="Horde" class="horde-icon"> SegazbsHelper | Аддоны</h1>
                 <p class="subtitle">Все необходимые аддоны для работы конфигов</p>
             </div>
             <nav>
