--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
                 <a href="index.html" class="active"><i class="fas fa-th-large"></i> Конфиги</a>
                 <a href="macros.html"><i class="fas fa-terminal"></i> Макросы</a>
                 <a href="addons.html"><i class="fas fa-puzzle-piece"></i> Аддоны</a>
+                <a href="guides.html"><i class="fas fa-video"></i> Гайды</a>
                 <a href="contribute.html" class="contribute-link">
                     <i class="fas fa-plus-circle"></i> Добавить конфиг
                 </a>
