--- a/admin.html
+++ b/admin.html
@@ -232,6 +232,12 @@
                             <label for="configAuthor">Автор:</label>
                             <input type="text" id="configAuthor" required>
                         </div>
+                        <div class="form-group">
+                            <label>
+                                <input type="checkbox" id="configNotify" name="notify">
+                                📢 Отправить уведомление в Telegram
+                            </label>
+                        </div>
                         <button type="submit" class="btn-primary">Сохранить конфиг</button>
                         <button type="button" id="cancelEdit" class="btn-secondary">Отмена</button>
                     </form>
@@ -281,6 +287,12 @@
                             <label for="macroAuthor">Автор:</label>
                             <input type="text" id="macroAuthor" required>
                         </div>
+                        <div class="form-group">
+                            <label>
+                                <input type="checkbox" id="configNotify" name="notify">
+                                📢 Отправить уведомление в Telegram
+                            </label>
+                        </div>
                         <button type="submit" class="btn-primary">Сохранить макрос</button>
                         <button type="button" id="cancelMacroEdit" class="btn-secondary">Отмена</button>
                     </form>
@@ -322,6 +334,12 @@
                             <label for="addonAuthor">Автор:</label>
                             <input type="text" id="addonAuthor" required>
                         </div>
+                        <div class="form-group">
+                            <label>
+                                <input type="checkbox" id="configNotify" name="notify">
+                                📢 Отправить уведомление в Telegram
+                            </label>
+                        </div>
                         <button type="submit" class="btn-primary">Сохранить аддон</button>
                         <button type="button" id="cancelAddonEdit" class="btn-secondary">Отмена</button>
                     </form>
@@ -354,6 +372,12 @@
                         <div class="form-group">
                             <label for="guideAuthor">Автор:</label>
                             <input type="text" id="guideAuthor" required>
+                        </div>
+                        <div class="form-group">
+                            <label>
+                                <input type="checkbox" id="configNotify" name="notify">
+                                📢 Отправить уведомление в Telegram
+                            </label>
                         </div>
                         <button type="submit" class="btn-primary">Сохранить гайд</button>
                         <button type="button" id="cancelGuideEdit" class="btn-secondary">Отмена</button>
