--- a/admin.html
+++ b/admin.html
@@ -233,10 +233,13 @@
                             <input type="text" id="configAuthor" required>
                         </div>
                         <div class="form-group">
-                            <label>
+                            <div class="notify-checkbox">
                                 <input type="checkbox" id="configNotify" name="notify">
-                                📢 Отправить уведомление в Telegram
-                            </label>
+                                <label for="configNotify">
+                                    <span class="emoji">📢</span>
+                                    Отправить уведомление в Telegram
+                                </label>
+                            </div>
                         </div>
                         <button type="submit" class="btn-primary">Сохранить конфиг</button>
                         <button type="button" id="cancelEdit" class="btn-secondary">Отмена</button>
@@ -288,10 +291,13 @@
                             <input type="text" id="macroAuthor" required>
                         </div>
                         <div class="form-group">
-                            <label>
+                            <div class="notify-checkbox">
                                 <input type="checkbox" id="configNotify" name="notify">
-                                📢 Отправить уведомление в Telegram
-                            </label>
+                                <label for="configNotify">
+                                    <span class="emoji">📢</span>
+                                    Отправить уведомление в Telegram
+                                </label>
+                            </div>
                         </div>
                         <button type="submit" class="btn-primary">Сохранить макрос</button>
                         <button type="button" id="cancelMacroEdit" class="btn-secondary">Отмена</button>
@@ -335,10 +341,13 @@
                             <input type="text" id="addonAuthor" required>
                         </div>
                         <div class="form-group">
-                            <label>
+                            <div class="notify-checkbox">
                                 <input type="checkbox" id="configNotify" name="notify">
-                                📢 Отправить уведомление в Telegram
-                            </label>
+                                <label for="configNotify">
+                                    <span class="emoji">📢</span>
+                                    Отправить уведомление в Telegram
+                                </label>
+                            </div>
                         </div>
                         <button type="submit" class="btn-primary">Сохранить аддон</button>
                         <button type="button" id="cancelAddonEdit" class="btn-secondary">Отмена</button>
@@ -374,10 +383,13 @@
                             <input type="text" id="guideAuthor" required>
                         </div>
                         <div class="form-group">
-                            <label>
+                            <div class="notify-checkbox">
                                 <input type="checkbox" id="configNotify" name="notify">
-                                📢 Отправить уведомление в Telegram
-                            </label>
+                                <label for="configNotify">
+                                    <span class="emoji">📢</span>
+                                    Отправить уведомление в Telegram
+                                </label>
+                            </div>
                         </div>
                         <button type="submit" class="btn-primary">Сохранить гайд</button>
                         <button type="button" id="cancelGuideEdit" class="btn-secondary">Отмена</button>
